--- a/www/index.html
+++ b/www/index.html
@@ -5,41 +5,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
   <script src="components/loader.js"></script>
-  <script src="lib/jquery-3.4.1.min.js>"></script>
+  <script src="lib/jquery-3.4.1.min.js"></script>
   <script src="components/plugin.js"></script>
 
   <link rel="stylesheet" href="components/loader.css">
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="lib/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
   <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <h2>Plugins 2</h2>
+      </div>
+    </div>
     <div class="form-group">
       <div class="row">
         <div class="col-sm">
-          <button class="btn btn-primary btn-block" id="btn1">Alert</button>
+          <button class="btn btn-primary btn-block" id="camera">Câmera</button>
         </div>
       </div>
     </div>
     <div class="form-group">
       <div class="row">
         <div class="col-sm">
-          <button class="btn btn-primary btn-block" id="btn2">Confirmar</button>
+          <button class="btn btn-primary btn-block" id="codigo">Código de barra</button>
         </div>
       </div>
     </div>
     <div class="form-group">
       <div class="row">
         <div class="col-sm">
-          <button class="btn btn-primary btn-block" id="btn3">Beep</button>
+          <button class="btn btn-primary btn-block" id="network">Conexão</button>
         </div>
       </div>
     </div>
     <div class="form-group">
       <div class="row">
         <div class="col-sm">
-          <button class="btn btn-primary btn-block" id="btn4">Vibrar</button>
+          <img id="imagem" class="img-responsive">
         </div>
       </div>
     </div>
